Fix player margins, nav button on Firefox

--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ header .link-list-container a {
 header .link-list-container a,
 header .icon-list-container a {
 }
-.nav-main-item,
+/* .nav-main-item,
 .nav-main-item .nav-main-item-icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -144,6 +144,11 @@ header .icon-list-container a {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+} */
+.nav-main-item,
+.nav-main-item-title,
+.nav-main-item-icon {
+  display: inline-block;
 }
 .nav-main-item {
   font-family: 'Anton', sans-serif;
@@ -155,9 +160,15 @@ header .icon-list-container a {
   cursor: pointer;
   -webkit-transition: all 0.7s;
   transition: all 0.7s;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
 }
 .nav-main-item i {
-  margin: 0 0.5em;
+  margin: 0 0.25em;
 }
 .nav-main-item:hover,
 .nav-main-item:focus {
@@ -359,6 +370,7 @@ header nav .nav-item-minimized .nav-main-item-icon i {
      object-fit: cover;
   -o-object-position: center;
      object-position: center;
+  vertical-align: bottom;
 }
 .episode-info-container {
   position: absolute;
@@ -369,15 +381,22 @@ header nav .nav-item-minimized .nav-main-item-icon i {
   width: 100%;
   min-width: 120px;
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .episode-img-container .episode-info,
 .episode-primary .episode-info {
   border-radius: 20px;
   text-align: center;
   opacity: 0;
+  -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
   text-shadow: #000 0 0 50px;
   position: relative;
@@ -385,12 +404,12 @@ header nav .nav-item-minimized .nav-main-item-icon i {
 }
 .episode-info-container::before {
   background: rgba(0,0,0,0.8);
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+50,000000+100&0+0,0.6+30,0.82+50,0.6+70,0+100 */
-  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 20%, rgba(0,0,0,0.82) 50%, rgba(0,0,0,0.6) 80%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 20%,rgba(0,0,0,0.82) 50%,rgba(0,0,0,0.6) 80%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+50,000000+100&0+0,0.6+30,0.82+50,0.6+70,0+100 */ /* FF3.6-15 */ /* Chrome10-25,Safari5.1-6 */
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0)),color-stop(20%, rgba(0,0,0,0.6)),color-stop(50%, rgba(0,0,0,0.82)),color-stop(80%, rgba(0,0,0,0.6)),to(rgba(0,0,0,0)));
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 20%,rgba(0,0,0,0.82) 50%,rgba(0,0,0,0.6) 80%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
   opacity: 0;
+  -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
   content: "";
   position: absolute;
@@ -555,7 +574,10 @@ footer .footer-social-container a {
 
 @media only screen and (max-width : 414px) {
   .episode-container {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .episode-primary,
   .episodes-other {
